--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "combine24",
-    "short_name": "combine24",
+    "name": "合廿四",
+    "short_name": "合廿四",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
